[package]
authors = ["aljun <gagasalamer@outlook.com>", "moonlight"]
edition = "2018"
license = "Apache-2.0"
name = "hora"
version = "0.1.1"

description = "Hora Search Everywhere"
homepage = "https://horasearch.com"
readme = "README.md"
repository = "https://github.com/hora-search/hora"

categories = ["algorithms", "data-structures"]
keywords = ["intelligence", "neighbor", "SIMD", "search", "distance"]

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 4
debug = 1
debug-assertions = true
inc